fix: make long dropdown options wrap (#3031)

--- a/web/projects/shared/styles/taiga.scss
+++ b/web/projects/shared/styles/taiga.scss
@@ -168,3 +168,8 @@ tui-textfield [tuiTooltip] {
     align-self: center !important;
   }
 }
+
+// TODO: Remove after migrating to v5
+[tuiOption] {
+  word-break: break-word;
+}
